--- a/lectures/09-home.qmd
+++ b/lectures/09-home.qmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Readings
 
-* [Chapter 14 "Strings"](https://r4ds.hadley.nz/strings) in "R for Data Science" 2nd Edition (read it all, especially 14.4 "Extracting data from strings")
+* [Chapter 14 "Strings"](https://r4ds.hadley.nz/strings) in "R for Data Science" 2nd Edition (especially 14.4 "Extracting data from strings")
 * [Chapter 17](https://bookdown.org/rdpeng/rprogdatascience/regular-expressions.html#the-stringr-package) from *R Programming for Data Science*. Focus on the `stringr()` section — that’s all we cover in class, but the full chapter is a good reference if you want to explore more
 * [`stringr()` documentation and cheatsheet](https://stringr.tidyverse.org/)
 
