--- a/lectures/14-home.qmd
+++ b/lectures/14-home.qmd
@@ -19,8 +19,22 @@ knitr::opts_chunk$set(echo = FALSE)
 * **Slides**: [View Slides]({{< meta url_slides >}})
 * **Code**: No in-class code to download
 
+<!-- `usethis::use_course("css-materials/functions-bugs")` -->
 
 ## Learning Objectives
 
+* Review and continue the lecture on Functions  
+* Practice debugging code  
+* Distinguish between errors, warnings, and messages  
 
 ## Readings
+
+Functions:
+
+* See the previous lecture for the reading on Functions
+
+Optional readings on debugging:
+
+* "Debugging R code" in [What They Forgot to Teach You About R](https://rstats.wtf/debugging-r)
+* [21.6 Dealing with failure in *R for Data Science*](http://r4ds.had.co.nz/iteration.html#dealing-with-failure)
+* [How to read an R help page](http://socviz.co/appendix.html#how-to-read-an-r-help-page)
