--- a/lectures/15-home.qmd
+++ b/lectures/15-home.qmd
@@ -19,8 +19,28 @@ knitr::opts_chunk$set(echo = FALSE)
 * **Slides**: [View Slides]({{< meta url_slides >}})
 * **Code**: No in-class code to download
 
+<!--`usethis::use_course("css-materials/getting-data-from-the-web-scraping")` -->
 
 ## Learning Objectives
 
+* Understand the difference between web-scraping and Application Program Interface (API)
+* Define HTML and CSS selectors
+* Introduce the `rvest` package for scraping in R
+* Demonstrate how to extract information from HTML pages
+
 
 ## Readings
+
+Not required before class, use them to clarify the lectures on web-scraping or support your work.
+
+General Introductions:
+
+* Chapter 1 and 4 in [Web Scraping with R](https://steviep42.github.io/webscraping/book/)
+* [`rvest` documentation](https://rvest.tidyverse.org/articles/harvesting-the-web.html)
+* [`httr` documentation](https://cran.r-project.org/web/packages/httr/)
+* [Web Scraping using R Cheat Sheet](https://github.com/yusuzech/r-web-scraping-cheat-sheet/blob/master/README.md)
+
+Scraping workflow:
+
+  * [Web scraping with R](https://williammarble.co/files/webscraping_tutorial/webscraping_tutorial.pdf) by William Marble
+  * [Web scraping using R](https://journals.sagepub.com/doi/pdf/10.1177/2515245919859535) by Alex Bradley and Richard J. E. James
