--- a/lectures/17-home.qmd
+++ b/lectures/17-home.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Lecture 17: Reproducible Workflow, Final Project Check-In"
+title: "Lecture 17: Reproducible Workflow"
 date: 2025-12-01
-summary: "Reproducible Workflow, Final Project Check-In"
+summary: "Reproducible Workflow"
 url_slides: 17-slides.qmd
 #url_code: css-materials/workflow
 page-layout: full
@@ -19,8 +19,20 @@ knitr::opts_chunk$set(echo = FALSE)
 * **Slides**: [View Slides]({{< meta url_slides >}})
 * **Code**: No in-class code to download
 
+<!--`usethis::use_course("css-materials/deep-dive-reproducible-git-rmd")`-->
 
 ## Learning Objectives
 
+* Define a project-oriented workflow in R and identify R startup procedures
+* Expand current knowledge of R Markdown
+* Basics of Git/GitHub via terminal/command line 
+* Prep for Exam 2
 
 ## Readings
+
+Not required before class, use them to clarify the lecture or support your work.
+
+* [Good Enough Practices in Scientific Computing](http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510)
+* Chapters 1, 2, 3, 7 in [What They Forgot to Teach You About R](https://rstats.wtf/)
+* Chapters 27 "R Markdown", 28 "Graphics for communication", and 29 "R Markdown formats" in [R for Data Science 1st Edition](http://r4ds.had.co.nz)
+* Article on [Project-oriented workflow](https://www.tidyverse.org/articles/2017/12/workflow-vs-script/)
