--- a/lectures/12-home.qmd
+++ b/lectures/12-home.qmd
@@ -30,4 +30,5 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Readings
 
+- ["Chapter 27.5 For Loops"](https://r4ds.hadley.nz/base-R.html#for-loops) (high level intro here, slides unpack the details)
 - ["Chapter 26 Iteration"](https://r4ds.hadley.nz/iteration) from "R for Data Science" 2nd Edition
