updated topics and learning obj

--- a/lectures/13-home.qmd
+++ b/lectures/13-home.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Lecture 13: Control Flow 2 (cont.); Functions 1"
 date: 2025-11-10
-summary: "Functions 1"
+summary: "Finish Loops; Introduce Functions"
 url_slides: 13-slides.qmd
 #url_code: css-materials/functions
 page-layout: full
@@ -23,12 +23,12 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Learning Objectives
 
-**Control Flow 2 — Loops:**
+**Loops:**
 
 - Identify and apply alternatives to for loops in R, such as `map()`, `across()`, and `apply()`
 - Introduce while loops
 
-**Functions 1:**  
+**Functions:**  
 
 - Define functions and their purposes  
 - Understand the difference between built-in and user-written functions  
@@ -37,4 +37,5 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Readings
 
-* [Chapter 15 "Functions"](https://r4ds.hadley.nz/functions) in "R for Data Science" 2nd Edition
+* Loops: Same readings as in previous lecture
+* Functions: [Chapter 15 "Functions"](https://r4ds.hadley.nz/functions) in "R for Data Science" 2nd Edition
