--- a/lectures/01-slides.qmd
+++ b/lectures/01-slides.qmd
@@ -163,9 +163,11 @@ See "Assessment" section of our Syllabus and the [Course Schedule](https://brina
 
 **Tips**:
 
+<!-- think about tips for reading this next year, either remove or say use readings to deepen your undrestanding  or clarify slides, before or after class -->
+
 * do the readings before class, even if you do not understand everything
 * start early to work on the take-home assignments; (starting from the 2nd) they will be a bit challenging, especially if you have never programmed before: they won't tell you exactly what to do to solve the problem
-* AI is cool but read our AI policy in the Syllabus
+* AI is powerful and excellent for debugging, but read our AI policy in the Syllabus
 * form a study group, and ask for help if you get stuck
 
 ---
@@ -187,7 +189,7 @@ See [How to Succeed in this Course](https://brinasab.github.io/css-website/sylla
 :::
 
 ::: fragment
--   "I’m in week 4, and I feel lost."<br>*Advice: Reach out to us! Concepts build over time. The big picture will click IF you stay consistent with your efforts every week.*
+-   "I’m in week 4, and I feel lost."<br>*Advice: Reach out to us! Concepts build over time. The big picture will click by the end of the coure IF you stay consistent with your efforts every week.*
 :::
 
 ::: fragment
@@ -208,6 +210,16 @@ Use the drop-in and by appointment model as in Fall 2024 and ask TAs to schedule
 -->
 ```
 
+<!-- 
+## Tips from instructional team...
+
+1. If you are not getting errors, many errors, you are not doing it right! Share story of CS friend spending days debugging a long code. Share point on delegating thinking to AI (missing out learning the most important think about programming: think how to best break down a big task into smaller tasks)
+
+2. If this is your very first programming class: be prepared for a thinking shift. 
+
+3. Topics are cumulative, review lectures as you go. Be patient and trust us: there is a reason why we introduce topics in the order we do. It's impossible to get a big picture right away. Share story of 2nd programming class making the cut, vs. first feeling a big overwhelming 
+
+-->
 
 ---
 
